[package]
name = "dalek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = {version = "2.0.0", features = ["rand_core", "pkcs8", "alloc", "pem", "zeroize"]}
rand = {version = "0.8", features = ["std_rng"]}
hex = "0.4.3"
bip39 = "2.0.0"